# CV_repository

./: .gitignore  README.md  pyproject.toml  requirements.txt  simulation.spec  test_json_checker.json
pre_commit_hooks/: pre_commit.py  setup_pre_commit_hooks.py
python_utilities/: dataclass_example.py  default_json_class.py  example.json  format_code.py  json_checker.py  json_checker_test.py  json_encoder.py  json_utility.py  module_utility.py  pre_commit.py  setup_pre_commit_hooks.py  test_black_precommit_format.py
sim_utils/: random.py  test_rng.py
simulations/: poker.py
slide_puzzle/: sarg.py  slide.py  slide_ref.py  tiles.py  tilesGreedy.py  tilesScramble.py  tilesSearch.py
tkinter_example/: simulation.py  subprocess_flush_test.py  tkinter_file.py
