[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "projectCV"
version = "0.0.1"
dynamic = ["dependencies"]

[tool.setuptools]
py-modules = []

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D103", "D101", "D100", "FA102"]

